maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:7: error: type mismatch;
 found   : Unit
 required: Boolean
def isDirectionFree(dir:Direction):Boolean = {
                                             ^